--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "didi": "^4.0.0",
     "hammerjs": "^2.0.1",
     "inherits": "^2.0.1",
+    "matter-js": "^0.14.2",
     "min-dash": "^3.5.0",
     "min-dom": "^3.0.0",
     "object-refs": "^0.3.0",
